@@ -1,3 +1,4 @@
+2239 [AviSynth Script Creator] added "Aspect Ratio Error"
 2238 [AviSynth Script Creator] enabled upsizing
 
 Changelog 2153 --> 2237
